Sun Aug 23 00:56:13 2009  Tanaka Akira  <akr@fsij.org>

	* thread.c (rb_thread_schedule): don't recur infinitely.
	  (rb_threadptr_execute_interrupts): ditto.
	  [ruby-dev:38060]

Sat Aug 22 15:07:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/syck/rubyext.c (id_hash_new): new function to create a hash
	  which key is compared by object id.
	  (syck_emitter_reset): use id_hash_new for bonus->data.

	* lib/yaml.rb (YAML.quick_emit): give the object itself to emitter.
	  don't use object_id and hash.

Sat Aug 22 13:05:22 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in: use CP and MV macros.

Sat Aug 22 01:29:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (rm_f, rm_rf): pass the last hash through if exists.
	  [ruby-dev:39153]

Sat Aug 22 00:48:08 2009  Tanaka Akira  <akr@fsij.org>

	* enumerator.c (ary2sv): add dup argument.
	  (enumerator_next): call ary2sv with dup=0.
	  (enumerator_peek): call ary2sv with dup=1 to return duplicated array.
	  (enumerator_peek_values_m): new function to return duplicated array.
	  (Init_Enumerator): use enumerator_peek_values_m as
	  Enumerator#peek_value.

Sat Aug 22 00:03:19 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* thread.c (rb_check_deadlock): decrease number of sleepers before
	  deadlock detection because the deadlock exception makes main thread
	  run.  [ruby-dev:39142]

Fri Aug 21 22:34:58 2009  Tanaka Akira  <akr@fsij.org>

	* enumerator.c (get_next_values): extracted from
	  enumerator_next_values.
	  (enumerator_next_values): use get_next_values.
	  (enumerator_peek_values): ditto.

Fri Aug 21 17:01:04 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/unicode/name2ctype.h: split from enc/unicode.c and made a
	  perfect hash.

Fri Aug 21 15:13:08 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/io.h, io.c (FMODE_SETENC_BY_BOM):
	  renamed from FMODE_STRIP_BOM.

Thu Aug 20 01:24:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_fmode_modestr): change modestr syntax for BOM